modified Makefiles to allow environmental variables to configure the build

--- a/02_Flash_2_SRAM_SDK/Makefile
+++ b/02_Flash_2_SRAM_SDK/Makefile
@@ -7,10 +7,11 @@ ARMGNU  = arm-none-eabi
 AFLAGS  = --warn --fatal-warnings -mcpu=$(CPU) -g
 LDFLAGS = -nostdlib
 CFLAGS  = -mcpu=$(CPU) -ffreestanding -nostartfiles -g -O0 -fpic -mthumb -c
-PICOSDK = ~/pico/pico-sdk
-UF2UTILS = ~/pico/baremetal/uf2/utils
+PICO_SDK_PATH ?= ~/pico/pico-sdk
+PAD_CHECKSUM ?= $(PISO_SDK_PATH)/src/rp2_common/boot_stage2/pad_checksum
+UF2CONV ?= ~/pico/baremetal/uf2/utils/uf2conv.py
 
-clean: 
+clean:
 	rm -f *.bin *.o *.elf *.list *.uf2 boot2_patch.*
 
 all: $(NAME).uf2
@@ -21,7 +22,7 @@ boot2.bin : boot2.s memmap_boot2.ld
 	$(ARMGNU)-objcopy -O binary boot2.elf boot2.bin
 
 boot2_patch.o : boot2.bin
-	$(PICOSDK)/src/rp2_common/boot_stage2/pad_checksum -p 256 -s 0xFFFFFFFF boot2.bin boot2_patch.s
+	$(PAD_CHECKSUM) -p 256 -s 0xFFFFFFFF boot2.bin boot2_patch.s
 	$(ARMGNU)-as $(AFLAGS) boot2_patch.s -o boot2_patch.o
 
 $(NAME).o: $(NAME).c
@@ -33,4 +34,4 @@ $(NAME).bin : memmap.ld boot2_patch.o $(NAME).o
 	$(ARMGNU)-objcopy -O binary $(NAME).elf $(NAME).bin
 
 $(NAME).uf2 : $(NAME).bin
-	$(UF2UTILS)/uf2conv.py $(NAME).bin --base 0x10000000 --family RP2040 --output $(NAME).uf2
+	$(UF2CONV) $(NAME).bin --base 0x10000000 --family RP2040 --output $(NAME).uf2
