--- a/00_asm_blink/Makefile
+++ b/00_asm_blink/Makefile
@@ -5,7 +5,8 @@ CPU     = cortex-m0plus
 ARMGNU  = arm-none-eabi
 AFLAGS  = --warn --fatal-warnings -mcpu=$(CPU) -g
 LDFLAGS = -nostdlib
-PICOSDK = ~/pico/pico-sdk
+PICO_SDK_PATH ?= ~/pico/pico-sdk
+ELF2UF2 ?= $(PICO_SDK_PATH)//tools/elf2uf2/elf2uf2
 
 all: $(NAME).bin
 
@@ -16,7 +17,7 @@ $(NAME).bin: boot_stage2.ld $(NAME).s $(NAME).o
 	$(ARMGNU)-ld $(LDFLAGS) --entry 0x20040001 -T boot_stage2.ld $(NAME).o -o $(NAME).elf
 	$(ARMGNU)-objdump -D $(NAME).elf > $(NAME).list
 	$(ARMGNU)-objcopy -O binary $(NAME).elf $(NAME).bin
-	$(PICOSDK)/tools/elf2uf2/elf2uf2 $(NAME).elf $(NAME).uf2
+	$(ELF2UF2) $(NAME).elf $(NAME).uf2
 
-clean: 
+clean:
 	rm -f *.bin *.o *.elf *.list *.uf2
