--- a/01_c_blink/Makefile
+++ b/01_c_blink/Makefile
@@ -6,7 +6,8 @@ ARMGNU  = arm-none-eabi
 AFLAGS  = --warn --fatal-warnings -mcpu=$(CPU) -g
 LDFLAGS = -nostdlib
 CFLAGS  = -mcpu=$(CPU) -nostartfiles -ffreestanding -g -O0 -fpic -mthumb -c
-PICOSDK = ~/pico/pico-sdk
+PICO_SDK_PATH ?= ~/pico/pico-sdk
+ELF2UF2 ?= $(PICO_SDK_PATH)/tools/elf2uf2/elf2uf2
 
 all: $(NAME).bin
 
@@ -20,7 +21,7 @@ $(NAME).bin: boot_stage2.ld $(NAME)-asm.o $(NAME)-main.o
 	$(ARMGNU)-ld $(LDFLAGS) --entry 0x20040001 -T boot_stage2.ld $(NAME)-asm.o $(NAME)-main.o -o $(NAME).elf
 	$(ARMGNU)-objdump -D $(NAME).elf > $(NAME).list
 	$(ARMGNU)-objcopy -O binary $(NAME).elf $(NAME).bin
-	$(PICOSDK)/tools/elf2uf2/elf2uf2 $(NAME).elf $(NAME).uf2
+	$(ELF2UF2) $(NAME).elf $(NAME).uf2
 
-clean: 
+clean:
 	rm -f *.bin *.o *.elf *.list *.uf2
