--- a/12_uart_irq/Makefile
+++ b/12_uart_irq/Makefile
@@ -8,8 +8,9 @@ AFLAGS  = --warn --fatal-warnings -mcpu=$(CPU) -g
 LDFLAGS = -nostdlib -nostartfiles
 INC_DIR = ./headers
 CFLAGS  = -mcpu=$(CPU) -ffreestanding -nostartfiles -g -O0 -fpic -mthumb -mfloat-abi=soft -c -I$(INC_DIR)
-PICOSDK = ~/pico/pico-sdk
-UF2UTILS = ~/pico/baremetal/uf2/utils
+PICO_SDK_PATH ?= ~/pico/pico-sdk
+PAD_CHECKSUM ?= $(PICO_SDK_PATH)/src/rp2_common/boot_stage2/pad_checksum
+UF2CONV ?= ~/pico/baremetal/uf2/utils/uf2conv.py
 
 clean:
 	rm -f *.bin *.o *.elf *.list *.uf2 boot2_patch.*
@@ -22,7 +23,7 @@ boot2.bin : boot2.s memmap_boot2.ld
 	$(ARMGNU)-objcopy -O binary boot2.elf boot2.bin
 
 boot2_patch.o : boot2.bin
-	$(PICOSDK)/src/rp2_common/boot_stage2/pad_checksum -p 256 -s 0xFFFFFFFF boot2.bin boot2_patch.s
+	$(PAD_CHECKSUM) -p 256 -s 0xFFFFFFFF boot2.bin boot2_patch.s
 	$(ARMGNU)-as $(AFLAGS) boot2_patch.s -o boot2_patch.o
 
 $uart.o: $uart.c
@@ -38,4 +39,4 @@ $(NAME).bin : memmap.ld boot2_patch.o $(NAME).o uart.o
 	$(ARMGNU)-objcopy -O binary $(NAME).elf $(NAME).bin
 
 $(NAME).uf2 : $(NAME).bin
-	$(UF2UTILS)/uf2conv.py $(NAME).bin --base 0x10000000 --family RP2040 --output $(NAME).uf2
+	$(UF2CONV) $(NAME).bin --base 0x10000000 --family RP2040 --output $(NAME).uf2
